{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 40,
  "lineage": "621bf7d2-fe2c-af43-3bfa-0791e720fbe4",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016a6e6f0f0e76ea8",
            "arn": "arn:aws:ec2:eu-west-2:801867401886:elastic-ip/eipalloc-016a6e6f0f0e76ea8",
            "domain": "vpc",
            "id": "eipalloc-016a6e6f0f0e76ea8",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-132-20-36.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.20.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-eip-eu-west-2a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-eip-eu-west-2a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01871c91620b4c398",
            "arn": "arn:aws:ec2:eu-west-2:801867401886:elastic-ip/eipalloc-01871c91620b4c398",
            "domain": "vpc",
            "id": "eipalloc-01871c91620b4c398",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-159-163.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.159.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-eip-eu-west-2b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-eip-eu-west-2b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099bb5e28c1a116f9",
            "arn": "arn:aws:ec2:eu-west-2:801867401886:elastic-ip/eipalloc-099bb5e28c1a116f9",
            "domain": "vpc",
            "id": "eipalloc-099bb5e28c1a116f9",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-134-12-187.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.134.12.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-eip-eu-west-2c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-eip-eu-west-2c"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:internet-gateway/igw-06b74de76cf76edf3",
            "id": "igw-06b74de76cf76edf3",
            "owner_id": "801867401886",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016a6e6f0f0e76ea8",
            "association_id": "eipassoc-0ab54512ecb09bb08",
            "connectivity_type": "public",
            "id": "nat-0003229aed63794dc",
            "network_interface_id": "eni-0d8916f083a5232b8",
            "private_ip": "10.0.1.225",
            "public_ip": "18.132.20.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068f9f0f381ea70cb",
            "tags": {
              "Name": "lesson-5-vpc-nat-eu-west-2a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eu-west-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01871c91620b4c398",
            "association_id": "eipassoc-03a9bd6026043d278",
            "connectivity_type": "public",
            "id": "nat-0d945004183a8877b",
            "network_interface_id": "eni-0bfad518a81f644db",
            "private_ip": "10.0.2.229",
            "public_ip": "13.43.159.163",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0322de29639a20d2e",
            "tags": {
              "Name": "lesson-5-vpc-nat-eu-west-2b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eu-west-2b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099bb5e28c1a116f9",
            "association_id": "eipassoc-0a9beb4af3d88b3c2",
            "connectivity_type": "public",
            "id": "nat-02c774323ee387e32",
            "network_interface_id": "eni-0ec648245297ed969",
            "private_ip": "10.0.3.168",
            "public_ip": "13.134.12.187",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b448f85c7411aab3",
            "tags": {
              "Name": "lesson-5-vpc-nat-eu-west-2c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eu-west-2c"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06ca79322cbfd8f171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0003229aed63794dc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ca79322cbfd8f17",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0edee96bd6af685ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d945004183a8877b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0edee96bd6af685ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03c143947761159961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02c774323ee387e32",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03c14394776115996",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b74de76cf76edf3",
            "id": "r-rtb-0e48b80f20a9448c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e48b80f20a9448c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:route-table/rtb-06ca79322cbfd8f17",
            "id": "rtb-06ca79322cbfd8f17",
            "owner_id": "801867401886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-eu-west-2a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:route-table/rtb-0edee96bd6af685ce",
            "id": "rtb-0edee96bd6af685ce",
            "owner_id": "801867401886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-eu-west-2b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:route-table/rtb-03c14394776115996",
            "id": "rtb-03c14394776115996",
            "owner_id": "801867401886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-eu-west-2c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-eu-west-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:route-table/rtb-0e48b80f20a9448c4",
            "id": "rtb-0e48b80f20a9448c4",
            "owner_id": "801867401886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f05ad64b1f2d7f4",
            "route_table_id": "rtb-06ca79322cbfd8f17",
            "subnet_id": "subnet-018d0d546e24999c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0347fd8681e2f7e9e",
            "route_table_id": "rtb-0edee96bd6af685ce",
            "subnet_id": "subnet-0694ff2ae60b411a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f8f9f78adfa867d",
            "route_table_id": "rtb-03c14394776115996",
            "subnet_id": "subnet-0d3eba676f3f3e1ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d52b5c569025395f",
            "route_table_id": "rtb-0e48b80f20a9448c4",
            "subnet_id": "subnet-068f9f0f381ea70cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a0422ff91d0e023",
            "route_table_id": "rtb-0e48b80f20a9448c4",
            "subnet_id": "subnet-0322de29639a20d2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aac3693f7797229",
            "route_table_id": "rtb-0e48b80f20a9448c4",
            "subnet_id": "subnet-0b448f85c7411aab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:subnet/subnet-018d0d546e24999c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d0d546e24999c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801867401886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:subnet/subnet-0694ff2ae60b411a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0694ff2ae60b411a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801867401886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:subnet/subnet-0d3eba676f3f3e1ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3eba676f3f3e1ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801867401886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:subnet/subnet-068f9f0f381ea70cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068f9f0f381ea70cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801867401886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:subnet/subnet-0322de29639a20d2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0322de29639a20d2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801867401886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "eu-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:subnet/subnet-0b448f85c7411aab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b448f85c7411aab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801867401886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-eu-west-2c"
            },
            "vpc_id": "vpc-0806b0ed432466cd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801867401886:vpc/vpc-0806b0ed432466cd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07906d6bcd22fc975",
            "default_route_table_id": "rtb-09b35b33a1eb444ca",
            "default_security_group_id": "sg-0dd452435825ea158",
            "dhcp_options_id": "dopt-0bcab78e673782b0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0806b0ed432466cd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b35b33a1eb444ca",
            "owner_id": "801867401886",
            "tags": {
              "Environment": "lesson-5",
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Environment": "lesson-5",
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}